<resources>
    <string name="app_name">Assignment1</string>
    <string name="musify">Musify</string>
    <string name="music">Music</string>
    <string name="signIn">Sign In</string>
    <string name="continueFacebook">Continue with Facebook</string>
    <string name="continueGoogle">Continue with Google</string>
    <string name="createAccount">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="passwordForget">Forgot Your Password?</string>
    <string name="gender">Gender</string>
    <string name="playlists">Playlists</string>
    <string name="playlist">Playlist</string>
    <string name="playlist1">Playlist 1</string>
    <string name="playlist2">Playlist 2</string>
    <string name="playlist3">Playlist 3</string>
    <string name="playlist4">Playlist 4</string>
    <string name="playlist5">Playlist 5</string>
    <string name="playlist6">Playlist 6</string>
    <string name="artists">Artists</string>
    <string name="artist">Artist</string>
    <string name="artist1">Artist 1</string>
    <string name="artist2">Artist 2</string>
    <string name="artist3">Artist 3</string>
    <string name="artist4">Artist 4</string>
    <string name="artist5">Artist 5</string>
    <string name="artist6">Artist 6</string>
    <string name="liked">Liked</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="later">Listen Later</string>
    <string name="songName">Song Name</string>
    <string name="addPlaylist">Add Playlist</string>
    <string name="playlistName">Playlist Name</string>
    <string name="description">Description</string>
    <string name="uploadMusic">Upload Music</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="upload">Upload</string>
    <string name="record">Record</string>
    <string name="songTitle">Song Title</string>
    <string name="byArtist">By Artist</string>
    <string name="commentUser">What an amazing song</string>
    <string name="commentPost">Post a comment</string>
    <string name="optionL">2 Options / Left selected</string>
    <string name="optionR">2 Options / Right selected</string>
    <string name="recentSearches">Recent Searches</string>
    <string name="l024">0:24</string>
    <string name="l301">3:01</string>
    <string name="r245">2:45</string>
    <string name="t000">0:00</string>
    <string name="t125">1:25</string>
    <string name="r0245">0:00/2:45</string>
    <string name="r1245">1:00/2:45</string>
    <string name="lt3">Tracks: 3</string>
    <string name="lt8">Tracks: 8</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="logout">Log out</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="changePassword">Change Password</string>
    <string name="editProfile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="profilePlaylist4">Playlists: 4</string>
    <string name="profileSong4">Songs: 4</string>
    <string name="selectPlaylist">Select Playlist</string>
    <string name="Open">NavBar</string>
    <string name="number">Number With Country Code</string>
    <string name="Close">NavBar</string>
    <string name="Home">Home</string>
    <string name="OTP">OTP</string>
    <string name="Contacts">Contacts</string>
    <string name="messages">MESSAGES</string>
    <string name="Generate">Generate OTP</string>

    <string name="newsletter">I would like to receive your newsletter and other promotional information.</string>


</resources>