<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:background="@color/black">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginTop="10dp"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:clickable="true"
        android:onClick="onSignUpSI"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/roundlogo"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:layout_marginStart="30dp"
        android:text="@string/musify"
        android:textColor="@color/white"
        android:textSize="40sp" />
    <EditText
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/yellow"
        android:hint="@string/name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:paddingStart="20dp"
        />
    <EditText
        android:id="@+id/passwordSignIn"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/yellow"
        android:hint="@string/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="370dp"
        android:paddingStart="20dp"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/showSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="385dp"
        android:layout_marginStart="330dp"
        android:text="@string/show"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:clickable="true"
        android:visibility="visible"
        android:onClick="onShowSignIn"
        />
    <TextView
        android:id="@+id/hideSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="385dp"
        android:layout_marginStart="330dp"
        android:text="@string/hide"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:visibility="invisible"
        android:clickable="true"
        android:onClick="onHideSignIn"
        />
    <android.widget.Button
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/yellowbutton"
        android:clickable="true"
        android:text="@string/signIn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="onClickSignIn" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginStart="105dp"
        android:text="@string/passwordForget"
        android:textColor="@color/yellow"
        android:textSize="19sp" />


</RelativeLayout>