<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">
    <android.widget.Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onAddUpload"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:text="@string/uploadMusic"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/upload" />

    <EditText
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/yellow"
        android:hint="@string/title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:paddingStart="20dp"
        />
    <EditText
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/yellow"
        android:hint="@string/genre"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:paddingStart="20dp"
        />
    <EditText
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/yellow"
        android:hint="@string/description"
        android:layout_marginStart="20dp"
        android:layout_marginTop="390dp"
        android:paddingStart="20dp"
        />
    <android.widget.Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="530dp"
        android:background="@drawable/yellowbutton"
        android:clickable="true"
        android:text= "@string/upload"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:clickable="true"
        android:onClick="onRecordUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="540dp"
        android:text="@string/record"
        android:textColor="@color/white"
        android:textSize="25sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:background="@color/purple"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/liked"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/liked"
                    android:layout_weight="0.4"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:background="@color/black"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/add"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/add"
                    android:layout_weight="0.4"
                    android:textColor="@color/white"
                    android:layout_marginStart="38dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/search"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/search"
                    android:layout_weight="0.4"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/later"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/later"
                    android:layout_weight="0.4"
                    android:textColor="@color/white"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
