<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:background="@color/black">

    <android.widget.Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onProfileEdit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/editProfile"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="30dp"
        android:text="@string/save"
        android:textSize="18sp"
        android:textColor="@color/yellow"
        android:clickable="true" />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/gradientcircle" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/yellow"
        android:layout_marginTop="310dp"
        android:layout_marginStart="160dp"
        android:textSize="22sp"
        />
    <EditText
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/yellow"
        android:hint="@string/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="370dp"
        android:paddingStart="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="385dp"
        android:layout_marginStart="330dp"
        android:text="@string/edit"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:clickable="true"
        android:visibility="visible"
        />
    <EditText
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:background="@drawable/edittext"
        android:textColor="@color/black"
        android:textColorHint="@color/yellow"
        android:hint="@string/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="470dp"
        android:paddingStart="20dp"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="485dp"
        android:layout_marginStart="330dp"
        android:text="@string/edit"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:clickable="true"
        android:visibility="visible"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:background="@color/purple"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/liked"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/liked"
                    android:layout_weight="0.4"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/add"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/add"
                    android:layout_weight="0.4"
                    android:textColor="@color/white"
                    android:layout_marginStart="38dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/search"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/search"
                    android:layout_weight="0.4"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:layout_marginStart="30dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/later"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/later"
                    android:layout_weight="0.4"
                    android:textColor="@color/white"
                    android:layout_marginStart="15dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>