<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
    <Button
        android:layout_weight="0.1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/backProfile"
        />
    <TextView
        android:layout_weight="0.8"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_weight="0.1"
        android:id="@+id/profileEditProfile"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/edit"
        android:clickable="true"
        android:focusable="true" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/gradientcircle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:gravity="center"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <View
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <View
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profilePlaylist4"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <View
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileSong4"
            android:textColor="@color/yellow"
            android:textSize="22sp"
            />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="180dp"/>

    </LinearLayout>



</LinearLayout>